# odoo-openupgrade-wizard

./: .coverage  .gitignore  .gitlab-ci.old.yml  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTORS.md  DEVELOP.md  INTERNAL_NOTES.md  README.md  ROADMAP.md  pyproject.toml  pytest.ini  tox.ini
odoo_openupgrade_wizard/: cli.py  cli_build.py  cli_docker_build.py  cli_estimate_workload.py  cli_execute_script.py  cli_execute_script_python.py  cli_execute_script_sql.py  cli_generate_module_analysis.py  cli_get_code.py  cli_init.py  cli_install_from_csv.py  cli_options.py  cli_run.py  cli_test.py  cli_test_dev.py  cli_upgrade.py  configuration_version_dependant.py  templates.py  tools_docker.py  tools_odoo.py  tools_odoo_instance.py  tools_odoo_module.py  tools_postgres.py  tools_system.py
odoo_openupgrade_wizard/cli/: cli.py  (+4 more)
tests/: __init__.py  cli_01_init_test.py  cli_02_get_code_test.py  cli_03_docker_build_test.py  cli_04_run_test.py  cli_05_execute_script_python_test.py  cli_06_execute_script_sql_test.py  cli_07_upgrade_test.py  cli_08_estimate_workload_test.py  cli_08_generate_module_analysis_test.py  cli_20_install_from_csv_test.py  cli_21_generate_module_analysis_test.py  cli_30_psql_test.py  cli_A_init_test.py  cli_B_01_get_code_test.py  cli_B_02_docker_build_test.py  cli_B_03_run_test.py  cli_B_03_upgrade_test.py  cli_B_04_execute_script_python_test.py  cli_B_04_execute_script_test.py  cli_B_05_execute_script_sql_test.py  cli_B_05_upgrade_test.py  cli_B_06_upgrade_test.py  cli_B_07_generate_module_analysis_test.py  cli_build_test.py  cli_init_test.py
(+24 files in other folders)
